# web-app

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: action.yml
backend/: db.py  main.py  models.py  schemas.py
docker/api/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
docker/db/initdb.d/: schema.sql  testdata.sql
docker/mysql/initdb.d/: testdata.sql
