[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["tomoya shibazaki <tshibazaki8165@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
SQLAlchemy = "^1.4.28"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"
mysqlclient = "^2.1.0"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
